Auth rework